[gd_scene load_steps=5 format=3 uid="uid://b5talbsmywskh"]

[ext_resource type="Script" path="res://Entities/EnemySpawner.gd" id="1_w8e13"]
[ext_resource type="PackedScene" path="res://Entities/Asteroid.tscn" id="2_w688j"]
[ext_resource type="Script" path="res://Entities/EnemyPath.gd" id="3_32y3j"]

[sub_resource type="Curve2D" id="Curve2D_6ydwc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -768, -312, 0, 0, 0, 0, 896, -320, 0, 0, 0, 0, 896, 376, 0, 0, 0, 0, -768, 376, 0, 0, 0, 0, -768, -312)
}
point_count = 5

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_w8e13")
Asteroid = ExtResource("2_w688j")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="EnemyPath" type="Path2D" parent="." node_paths=PackedStringArray("NODE")]
curve = SubResource("Curve2D_6ydwc")
script = ExtResource("3_32y3j")
NODE = NodePath("..")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2(-768, -312)
rotation = -0.00480765

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
